# scene_manipulation_service

./: README.md
description/: clone_chart.graphml  move_chart.graphml  remove_chart.graphml  reparent_chart.graphml  sms_chart.graphml
scene_manipulation_bringup/: CMakeLists.txt  package.xml
scene_manipulation_bringup/config/: scenario_1.rviz
scene_manipulation_bringup/launch/: sms_example.launch.py  sms_example_with_gui.launch.py
scene_manipulation_bringup/scenario_1/: frame_1.json  frame_2.json  frame_3.json
scene_manipulation_description/: add_chart.graphml  rename_chart.graphml
scene_manipulation_gui/: README.md  package.xml  setup.cfg  setup.py
scene_manipulation_gui/scene_manipulation_gui/: old_scene_manipulation_gui.py  scene_manipulation_gui.py
scene_manipulation_marker/: package.xml  setup.cfg  setup.py
scene_manipulation_marker/scene_manipulation_marker/: scene_manipulation_marker.py
scene_manipulation_msgs/: CMakeLists.txt  package.xml
scene_manipulation_msgs/msg/: TFExtra.msg  TFExtraData.msg
scene_manipulation_msgs/srv/: ExtraFeatures.srv  GetAllExtra.srv  GetAllTransforms.srv  GetExtra.srv  LoadScenario.srv  LookupTransform.srv  ManipulateExtras.srv  ManipulateScene.srv  ReloadScenario.srv  ResetMarker.srv
scene_manipulation_service/: CMakeLists.txt  Cargo.toml  package.xml  r2r_cargo.cmake
scene_manipulation_service/.cargo/: config.toml
scene_manipulation_service/src/: lib.rs  old_sms.rs  sms.rs  sms_extra.rs
scene_manipulation_service/src/common/: errors.rs  files.rs  frame_data.rs  lookup.rs  mod.rs
scene_manipulation_service/src/core/: buffer.rs  lookup.rs  mod.rs  sms.rs
scene_manipulation_service/src/extras/: broadcaster.rs  buffer.rs  extra_data.rs  extras.rs  markers.rs  mod.rs  server.rs
scene_manipulation_service/src/tests/: add_frame.rs  buffer.rs  cycles.rs  loading.rs  lookup.rs  mod.rs  quaternion.rs
scene_manipulation_service/src/tests/sms/: add_frame.rs  mod.rs  move_frame.rs  remove_frame.rs  rename_frame.rs
