[package]
name = "scene_manipulation_service"
version = "0.1.0"
authors = ["Endre Erős <endree@chalmers.se>"]
edition = "2021"
autotests = false

[dependencies]
r2r = "0.6.3"
# r2r = { path = "/home/endre/r2r" }
# r2r = { git = "https://github.com/sequenceplanner/r2r" }
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
serde = "1.0.144"
serde_json = "1.0.79"
tempfile = "3.3.0"
glam = "0.20.3"

[[bin]]
name = "sms"
path = "src/sms.rs"

[[bin]]
name = "sms_extra"
path = "src/sms_extra.rs"